изменила путь к картинке 1

--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -8,7 +8,7 @@
     
   <h1>Знание - сила!</h1>
   <p>Ученье cвет, а неученье тьма</p>
-  <img src="/img/1.jpg" alt="картинка 1">
+  <img src="/project/img/1.jpg" alt="картинка 1">
   <img src="../../img/2.jpg" alt="картинка 2">
 
 </body>
